<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="bottom_label">Tip Is: </string>
    <string name="tip_button_10">10%</string>
    <string name="tip_button_15">15%</string>
    <string name="tip_button_20">20%</string>
    <string name="grandTotal_label">Grand Total: </string>

</resources>
